# rust

./: .gitignore
proyects/alphabet_clock/: .gitignore  Cargo.toml
proyects/alphabet_clock/src/: main.rs
proyects/alphabet_clock/src/eight/: eight_am.rs  eight_pm.rs
proyects/alphabet_clock/src/eleven/: eleven_am.rs  eleven_pm.rs
proyects/alphabet_clock/src/five/: five_am.rs  five_pm.rs
proyects/alphabet_clock/src/four/: four_am.rs  four_pm.rs
proyects/alphabet_clock/src/helpers/: convert_to_usize_tupla.rs
proyects/alphabet_clock/src/hours/: it_is_twelve_and_five.rs  it_is_twenty_past_twelve.rs
proyects/alphabet_clock/src/nine/: nine_am.rs  nine_pm.rs
proyects/alphabet_clock/src/one/: one_am.rs  one_pm.rs
proyects/alphabet_clock/src/seven/: seven_am.rs  seven_pm.rs
proyects/alphabet_clock/src/six/: six_am.rs  six_pm.rs
proyects/alphabet_clock/src/square/: get_position.rs  print_square.rs  print_square_auto.rs
proyects/alphabet_clock/src/ten/: ten_am.rs  ten_pm.rs
proyects/alphabet_clock/src/three/: three_am.rs  three_pm.rs
proyects/alphabet_clock/src/twelve/: it_is_a_quarter_past_twelve.rs  it_is_five_to_twelve_o_clock.rs  it_is_half_past_twelve.rs  it_is_ten_to_twelve_o_clock.rs  it_is_twelve.rs  it_is_twelve_am.rs  it_is_twelve_and_five_am.rs  it_is_twelve_and_five_pm.rs  it_is_twelve_and_ten.rs  it_is_twelve_and_ten_am.rs  it_is_twelve_and_ten_pm.rs  it_is_twelve_less_one_fourth.rs  it_is_twelve_less_twenty_five.rs  it_is_twelve_pm.rs  it_is_twenty_five_past_twelve.rs  it_is_twenty_to_one_o_clock.rs  twelve_am.rs  twelve_pm.rs
(+314 files in other folders)
