[package]
name = "alphabet_clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
chrono = "0.4.31"
tokio = { version = "1.35.1", features = ["full"] }
mutex = "0.1.0"
crossterm = "0.27.0"
termion = "3.0.0"
